--- a/CreatureTeacher/appsettings.json
+++ b/CreatureTeacher/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;database=creature_teacher;uid=root;pwd=epicodus;"
+  }
 }
