Add Railway variables to appsettings, remove Docker from README.

--- a/CreatureTeacher/appsettings.json
+++ b/CreatureTeacher/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;database=creature_teacher;uid=root;pwd=epicodus;"
+    "DefaultConnection": "Server=${MYSQLHOST};Port=${MYSQLPORT};Database=${MYSQLDATABASE};User=${MYSQLUSER};Password=${MYSQLPASSWORD};"
   }
 }
