Add Docker files and instructions

--- a/CreatureTeacher/appsettings.json
+++ b/CreatureTeacher/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${MYSQLHOST};Port=${MYSQLPORT};Database=${MYSQLDATABASE};User=${MYSQLUSER};Password=${MYSQLPASSWORD};"
+    "DefaultConnection": "Server=creature-teacher-db;Port=3306;Database=creature_db;User=root;Password=epicodus;"
   }
 }
